fix: :bug: Fix paths for endpoints items GET and POST api. and Order POST api
